fix: Refactor services and controllers to use constructor injection for dependencies